--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,44 +1,72 @@
 <resources>
-    <string name="app_name">TutorConnect</string>
+    <string name="app_name">Tutor Connect</string>
     <string name="tutor_connect">Tutor Connect</string>
     <string name="student">Student</string>
     <string name="find_local_and_online_educators_for_tutoring_coaching_and_assistance_with_academic_work">Find local and online educators for tutoring, coaching, and assistance with academic work.</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">Welcome !</string>
     <string name="teacher">Teacher</string>
     <string name="go">Go</string>
     <string name="login_as_student">Login as Student</string>
-    <string name="enter_email">Enter Email</string>
+    <string name="email">Email</string>
     <string name="forget_password">Forget Password?</string>
-    <string name="login">Login</string>
-    <string name="don_t_have_an_account">Don\'t have an account? </string>
-    <string name="register_here">Register here!</string>
+    <string name="login">LOG IN</string>
+    <string name="don_t_have_an_account">Don\'t have account? </string>
     <string name="login_as_teacher">Login as Teacher</string>
     <string name="register_as_teacher">Register as Teacher</string>
     <string name="sign_up_as_teacher">Sign up as Teacher</string>
-    <string name="enter_password">Enter Password</string>
-    <string name="enter_your_name">Enter your name</string>
-    <string name="enter_details">Enter Details</string>
-    <string name="enter_birth_date">Enter Birth Date</string>
-    <string name="enter_location">Enter Location</string>
-    <string name="enter_your_postal_code">Enter your postal code</string>
+    <string name="password">Password</string>
+    <string name="name">Name</string>
+    <string name="details">Details</string>
+    <string name="birth_date">Date of Birth</string>
+    <string name="location">Location</string>
+    <string name="postal_code">Postal code</string>
     <string name="speciality_strength_or_current_role">Speciality, Strength or Current role</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="enter_you_mobile_number">Enter you Mobile Number</string>
-    <string name="enter_your_email">Enter your Email</string>
+    <string name="mobile_number">Mobile Number</string>
     <string name="select_grade">Select grade</string>
-    <string name="enter_your_insititute_name_with_city">Enter your Insititute name with city</string>
-    <string name="enter_your_orgranization_name">Enter your orgranization name</string>
-    <string name="enter_your_job_description">Enter your job description</string>
-    <string name="enter_your_cgpa">Enter your CGPA</string>
-    <string name="select_gender">Select Gender</string>
+    <string name="institute_name_with_city">Institute name with city</string>
+    <string name="organization_name">Organization name</string>
+    <string name="job_description">Job description</string>
+    <string name="Cgpa">CGPA</string>
+    <string name="gender">Gender</string>
     <string name="female">Female</string>
-    <string name="enter_your_fee_in_us">Enter your Fee in $US</string>
-    <string name="enter_your_profile_decsription">Enter your profile decsription</string>
+    <string name="fee_in_us">Fee in $US</string>
+    <string name="profile_description">Profile description</string>
     <string name="this_is_most_important_section_for_you">This is Most Important Section for you</string>
-    <string name="sign_up">Sign Up</string>
+    <string name="sign_up">SIGN UP</string>
     <string name="already_have_an_account">Already have an account?</string>
-    <string name="login_here">Login here</string>
+    <string name="male">Male</string>
+    <string name="subject">Subject</string>
+    <string name="degree_name">Degree Name</string>
+    <string name="experiences_in_years">Experiences in years</string>
+    <string name="logo">logo</string>
+    <string name="register">REGISTER</string>
+    <string name="click_on_image_to_continue">Click on image to continue</string>
+    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
+    <string name="please_select_your_gender">Please select your gender</string>
+    <string name="please_enter_your_name">Please enter your name</string>
+    <string name="please_enter_your_email">Please enter your email</string>
+    <string name="please_enter_your_password">Please enter your password</string>
+    <string name="please_confirm_your_password">Please confirm your password</string>
+    <string name="please_enter_your_speciality">Please enter your speciality</string>
+    <string name="please_enter_your_location">Please enter your location</string>
+    <string name="please_enter_your_postal_code">Please enter your postal code</string>
+    <string name="please_enter_your_phone_number">Please enter your phone number</string>
+    <string name="please_enter_your_subject">Please enter your subject</string>
+    <string name="please_enter_your_institute_name">Please enter your institute name</string>
+    <string name="please_enter_your_degree">Please enter your degree</string>
+    <string name="please_enter_your_experience">Please enter your experience</string>
+    <string name="please_enter_your_cgpa">Please enter your cgpa</string>
+    <string name="please_enter_your_organization">Please enter your organization</string>
+    <string name="please_enter_your_job_description">Please enter your job description</string>
+    <string name="please_enter_your_fee">Please enter your fee</string>
+    <string name="please_enter_your_profile">Please enter your profile</string>
+    <string name="password_not_match">password mis-matched</string>
+    <string name="please_select_your_grade">Please select your grade</string>
+    <string name="input_required">Input Required</string>
+    <string name="registered_successfully">Registered Successfully</string>
     <string-array name="grades_array">
+        <item>Select Grade</item>
         <item>Grade 1</item>
         <item>Grade 2</item>
         <item>Grade 3</item>
