--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="address">Address</string>
     <string name="upload_picture">Upload Picture</string>
     <string name="email_sent">Email sent</string>
+    <string name="please_enter_your_address">Please enter your address</string>
     <string-array name="grades_array">
         <item>Select Grade</item>
         <item>Grade 1</item>
